Updated the files using position

--- a/index.html
+++ b/index.html
@@ -25,7 +25,13 @@
             <input placeholder="Search the course which you want to learn">
         </div>
         <div class="navbar__sec3">
-            <p>My learning</p>
+            <div class="mylearning">
+                <p>My learning</p>
+                <div class="mylearning__popup">
+                    <p>You did not purchase anything yet</p>
+                </div>
+
+                </div>
             <p>courses</p>
             <i class="fa-solid fa-cart-shopping" style="color: black;"></i>
             <i class="fa-solid fa-bell" style="color: black;"></i>
@@ -42,6 +48,9 @@
 
     <div class="sales__image">
         <img src="images/udemy saless.jpg" alt="sales image">
+        <div class="sales__image__offer">
+            <h2> Get your first course for ₹ 499</h2>
+            <p> Choose from 100,000+ courses and learn it your lift time. This is limited time offer, only for first 100 active learners</p>
     </div>
 
     <div class="recommended">
