Updated a file using  media query

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
             <i class="fa-solid fa-bell" style="color: black;"></i>
             <i class="fa-solid fa-user" style="color: #111212;"></i>
         </div>
+        <div class="navbar__sec4">
+            <i class="fa-solid fa-bars"></i>
+            </div>
     </div>
     <div class="catagories">
         <p> Development </p>
@@ -50,7 +53,7 @@
         <img src="images/udemy saless.jpg" alt="sales image">
         <div class="sales__image__offer">
             <h2> Get your first course for ₹ 499</h2>
-            <p> Choose from 100,000+ courses and learn it your lift time. This is limited time offer, only for first 100 active learners</p>
+            <p> Choose your course and learn it on your lift time. This offers valid only for first 100 learners</p>
     </div>
 
     <div class="recommended">
