--- a/index.html
+++ b/index.html
@@ -112,58 +112,58 @@
             <p class="popular__subtitle"> Pick the best for you</p>
             <div class="popular__container">
                 <div class="course__card">
-                    <img src="images/c1.jpeg" alt="course image">
-                    <h3> Web Development Bootcamp</h3>
-                    <p> Eva Juli</p>
+                    <img src="images/AI.jpeg" alt="course image">
+                    <h3> Artificial intelligence</h3>
+                    <p> 87.9 total hours</p>
                     <p> 4.5 ⭐⭐⭐⭐ </p>
                     <p> ₹ 599 <del> 1999</del></p>
                 </div>
                 <div class="course__card">
-                    <img src="images/c2.jpeg" alt="course image">
-                    <h3> data science</h3>
-                    <p> Eren Bali </p>
+                    <img src="images/cloud engineer.jpeg" alt="course image">
+                    <h3> Cloud Engineer</h3>
+                    <p> 72 total hours</p>
                     <p> 4.5 ⭐⭐⭐⭐⭐</p>
                     <p> ₹ 299 <del> 1999</del></p>
                 </div>
                 <div class="course__card">
-                    <img src="./images/c3.jpeg" alt="course image">
-                    <h3> Python programming</h3>
-                    <p> Oktay Caglar</p>
+                    <img src="images/Data scientist.jpeg" alt="course image">
+                    <h3> Data scientist</h3>
+                    <p> 94 total hours</p>
                     <p> 4.5⭐⭐⭐⭐ </p>
                     <p> ₹ 499 <del> 1999</del></p>
                 </div>
                 <div class="course__card">
-                    <img src="./images/c4.jpeg" alt="course image">
+                    <img src="images/Digital marketing.jpeg" alt="course image">
                     <h3> digital marketing</h3>
-                    <p> Gagan Biyani</p>
+                    <p> 55 total hours</p>
                     <p> 4.5⭐⭐⭐⭐ </p>
                     <p> ₹ 399 <del> 1999</del></p>
                 </div>
                  <div class="course__card">
-                    <img src="./images/c3.jpeg" alt="course image">
-                    <h3> Python programming</h3>
-                    <p> Oktay Caglar</p>
+                    <img src="images/full stack.jpeg" alt="course image">
+                    <h3> Full Stack development</h3>
+                    <p> 132 total hours</p>
                     <p> 4.5⭐⭐⭐⭐ </p>
                     <p> ₹ 499 <del> 1999</del></p>
                 </div>
                  <div class="course__card">
-                    <img src="./images/c4.jpeg" alt="course image">
-                    <h3> digital marketing</h3>
-                    <p> Gagan Biyani</p>
+                    <img src="images/machine learning.jpeg" alt="course image">
+                    <h3> Machine Learning </h3>
+                    <p> 72 total hours</p>
                     <p> 4.5⭐⭐⭐⭐ </p>
                     <p> ₹ 399 <del> 1999</del></p>
                 </div>
                 <div class="course__card">
-                    <img src="./images/c2.jpeg" alt="course image">
-                    <h3> data science</h3>
-                    <p> Eren Bali </p>
+                    <img src="images/python developer.jpeg" alt="course image">
+                    <h3> Python Development</h3>
+                    <p> 48 total hours </p>
                     <p> 4.5 ⭐⭐⭐⭐⭐</p>
                     <p> ₹ 299 <del> 1999</del></p>
                 </div>
                 <div class="course__card">
-                    <img src="./images/c1.jpeg" alt="course image">
-                    <h3> Web Development Bootcamp</h3>
-                    <p> Eva Juli</p>
+                    <img src="images/web development.jpeg" alt="course image">
+                    <h3> Web Development</h3>
+                    <p> 86 total hours</p>
                     <p> 4.5 ⭐⭐⭐⭐ </p>
                     <p> ₹ 599 <del> 1999</del></p>
                 </div>
